[project]
name = "dreamcube"
description = "360° panoramic depth estimation with multi-plane synchronization for ComfyUI, featuring equirectangular-cubemap transformations, cross-face consistency, and boundary blending for seamless depth maps."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI-DreamCube Requirements", "# Core dependencies for 360° panoramic depth estimation with multi-plane synchronization", "# PyTorch - GPU acceleration and tensor operations", "torch>=2.0.0", "torchvision>=0.15.0", "# Numerical computing", "numpy>=1.24.0", "scipy>=1.10.0", "# Image processing", "pillow>=9.5.0", "opencv-python>=4.7.0", "# Tensor operations", "einops>=0.6.1", "# Development dependencies (optional)", "# pytest>=7.3.0", "# pytest-cov>=4.1.0", "# black>=23.3.0", "# ruff>=0.0.270"]

[project.urls]
Repository = "https://github.com/cedarconnor/ComfyUI-DreamCube"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/cedarconnor/ComfyUI-DreamCube/wiki"
"Bug Tracker" = "https://github.com/cedarconnor/ComfyUI-DreamCube/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DreamCube"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

